WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39796
Fix webkit01.dat resumer tests in HTML5 parser
https://bugs.webkit.org/show_bug.cgi?id=39796
Summary
Fix webkit01.dat resumer tests in HTML5 parser
Adam Barth
Reported
2010-05-26 15:45:24 PDT
Fix webkit01.dat resumer tests in HTML5 parser
Attachments
Patch
(13.29 KB, patch)
2010-05-26 15:47 PDT
,
Adam Barth
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-05-26 15:47:28 PDT
Created
attachment 57176
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-05-26 16:00:31 PDT
Comment on
attachment 57176
[details]
Patch Seems OK. I'm not sure if this design is better than putting a bool on the lexer to say that it's done though.
Adam Barth
Comment 3
2010-05-26 16:06:38 PDT
Committed
r60257
: <
http://trac.webkit.org/changeset/60257
>
WebKit Review Bot
Comment 4
2010-05-26 16:40:42 PDT
http://trac.webkit.org/changeset/60257
might have broken GTK Linux 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/60257
http://trac.webkit.org/changeset/60258
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug