WebCore/html/HTML5Lexer.h
@@ -139,7 +139,7 @@ namespace WebCore {
         inline void maybeFlushBufferedEndTag();
         inline void flushBufferedEndTag();
 
-        inline bool haveBufferedCharacterToken();
+        inline bool shouldEmitBufferedCharacterToken(const SegmentedString&);
 
         State m_state;
 
