WebCore/html/HTML5Tokenizer.cpp
@@ -49,17 +49,24 @@ void HTML5Tokenizer::begin()
 {
 }
 
-void HTML5Tokenizer::write(const SegmentedString& source, bool)
+void HTML5Tokenizer::pumpLexer()
 {
-    m_source.append(source);
     while (m_lexer->nextToken(m_source, m_token)) {
         m_treeBuilder->constructTreeFromToken(m_token);
         m_token.clear();
     }
 }
 
+void HTML5Tokenizer::write(const SegmentedString& source, bool)
+{
+    m_source.append(source);
+    pumpLexer();
+}
+
 void HTML5Tokenizer::end()
 {
+    m_source.close();
+    pumpLexer();
     m_treeBuilder->finished();
 }
 
