WebCore/html/HTML5Tokenizer.h
@@ -57,6 +57,8 @@ public:
     virtual bool isWaitingForScripts() const;
 
 private:
+    void pumpLexer();
+
     SegmentedString m_source;
 
     // We hold m_token here because it might be partially complete.
