WebCore/platform/text/SegmentedString.h
@@ -71,21 +71,22 @@ private:
 class SegmentedString {
 public:
     SegmentedString()
-        : m_pushedChar1(0), m_pushedChar2(0), m_currentChar(0), m_composite(false) {}
+        : m_pushedChar1(0), m_pushedChar2(0), m_currentChar(0), m_composite(false), m_closed(false) {}
     SegmentedString(const UChar* str, int length) : m_pushedChar1(0), m_pushedChar2(0)
-        , m_currentString(str, length), m_currentChar(m_currentString.m_current), m_composite(false) {}
+        , m_currentString(str, length), m_currentChar(m_currentString.m_current), m_composite(false), m_closed(false) {}
     SegmentedString(const String& str)
         : m_pushedChar1(0), m_pushedChar2(0), m_currentString(str)
-        , m_currentChar(m_currentString.m_current), m_composite(false) {}
+        , m_currentChar(m_currentString.m_current), m_composite(false), m_closed(false) {}
     SegmentedString(const SegmentedString&);
 
     const SegmentedString& operator=(const SegmentedString&);
 
     void clear();
+    void close() { m_closed = true; }
 
     void append(const SegmentedString&);
     void prepend(const SegmentedString&);
-    
+
     bool excludeLineNumbers() const { return m_currentString.excludeLineNumbers(); }
     void setExcludeLineNumbers();
 
@@ -99,9 +100,11 @@ public:
             m_pushedChar2 = c;
         }
     }
-    
+
     bool isEmpty() const { return !current(); }
     unsigned length() const;
+
+    bool isClosed() const { return m_closed; }
 
     enum LookAheadResult {
         DidNotMatch,
@@ -213,6 +216,7 @@ private:
     const UChar* m_currentChar;
     Deque<SegmentedSubstring> m_substrings;
     bool m_composite;
+    bool m_closed;
 };
 
 }
